@@ -1,3 +1,7 @@
+Wed Oct 16 23:21 2013 CDT
+    * www/assets/js/util.js: Add an errDialog function that shows an
+      error message over the chatbox (instead of alert())
+
 Wed Oct 16 23:09 2013 CDT
     * www/assets/js/util.js: Add a special handler so that clicking
       anywhere on the page clears a userlist dropdown, not just right
